# feature-flags

./: .gitignore  DESIGN.md  README.md  fubo-flags.html
.github/workflows/: ci.yml
conformance/: README.md  reference_bucket.py  vectors.json
control-plane/: Makefile  README.md  docker-compose.yml  pyproject.toml
control-plane/app/: config.py  db.py  deps.py  logging_setup.py  main.py
control-plane/app/api/: _common.py  audit.py  credentials.py  flags.py  projects.py  segments.py
control-plane/app/models/: __init__.py  audit.py  base.py  catalog.py  flag.py  segment.py
control-plane/app/schemas/: catalog.py  credential.py  flag.py  segment.py
control-plane/app/services/: audit.py  credentials.py  notify.py
control-plane/app/web/static/: app.js  index.html  style.css
control-plane/config/: config.yaml
control-plane/tests/: conftest.py  test_flags.py  test_projects.py  test_surface.py
data-plane/: README.md  go.mod  go.sum
data-plane/cmd/dataplane/: main.go
data-plane/config/: config.yaml
data-plane/internal/auth/: auth.go
data-plane/internal/config/: config.go
data-plane/internal/server/: integration_test.go  server.go
data-plane/internal/store/: store.go
docker/: README.md  control-plane.Dockerfile
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_flag_salt.down.sql  0002_flag_salt.up.sql  README.md  apply.sh
sdk/go/: Makefile  README.md  go.mod
sdk/go/flageval/: bucket.go  clauses.go  conformance_test.go  context.go  eval.go  types.go  values.go
terraform/: README.md
